fix alignment of activitylist in daytripview and added circle image to activitylist

--- a/src/app/daytripview/location_row.component.css
+++ b/src/app/daytripview/location_row.component.css
@@ -1,13 +1,11 @@
-.cirlce-sm {
+.circle-md {
 	background-size: cover;
 	background-position: center;
 
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	border-radius: 50%;
-	width: 50px;
-	height: 50px;
+	width: 75px;
+	height: 75px;
 	background-color: #41E2B0;
-	/*display: block;*/
 }
-
